# hyperreal

./: .coveragerc  .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: publish.yml  test_python.yml
docs/: architecture.md  definitions.md  design.md  index.md
examples/australian_federal_hansard/: README.md  download_data.py  hansard_corpus.py
examples/stackoverflow/: prepare_data.sh  visuals.py
hyperreal/: __init__.py  _index_schema.py  cli.py  corpus.py  db_utilities.py  extensions.py  index.py  model.py  server.py  utilities.py
hyperreal/corpus/builtin/: corpus.py
hyperreal/templates/: base.html  cluster.html  details.html  index.html  index_listing.html  macros.html
test_data/: stackoverflow_posts_to_text.py
tests/: test_cli.py  test_corpora.py  test_index.py  test_script.py  test_server.py
tests/corpora/: alice.db
tests/data/: alice30.txt
tests/index/: alice_index.db
