[project]
name = "hyperreal"
description = "Hyperreal is a library and tool for intepretive topic modelling."
readme = "README.md"
requires-python = ">=3.9.0"
license = {file = "LICENSE.txt"}
authors = [
  {name = "Sam Hames"},
  {name = "Kateryna Kasianenko"}
]
classifiers=[
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "click>=8.1.0",
  "jinja2>=3.1.0",
  "pyroaring>=0.3.4",
  "regex>=2022.4.24",
  "cherrypy>=18.6.0",
  "python-dateutil>=2.8.0",
  "networkx>=3.0.0",
  "lxml",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "black", "tox", "requests"]

[project.urls]
Repository = "https://github.com/SamHames/hyperreal/"

[project.scripts]
hyperreal = "hyperreal.cli:cli"

[tool.setuptools]
package-dir = {"" = "hyperreal"}

[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--ignore=examples"

[tool.setuptools_scm]
